<resources>
    <string name="app_name">TeamWar</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
         AIzaSyDQXXzsQrPtVNMQ51pBmryso5rBWI2xnsI
    </string>

    <string name="restore">Restore</string>

    <string name="permission_location_not_granded">No permissions for use locales</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_mark">Mark edit</string>

    <string name="mes_service_work">Your location detect in current moment</string>
    <string name="mes_mark_removed">Mark removed</string>

    <string name="action_connect">Connect</string>
    <string name="action_to_map">To map</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_mark">Add mark</string>

    <string name="hint_name">Your nick name</string>
    <string name="hint_pass">Password of group</string>
    <string name="hint_mark">Description of mark</string>

    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_log">Logs</string>
    <string name="menu_sign_out">Sign out</string>

    <string name="mark_of_my_side">Mark of my side</string>
    <string name="mark_of_enemy">Mark of enemy</string>
    <string name="mark_neutral">Neutral mark</string>

    <string name="mark_current_location">Current location</string>
    <string name="mark_manual_location">Manual location</string>
    <string name="hint_latitude">Latitude (DD)</string>
    <string name="hint_longitude">Longitude (DD)</string>

    <!-- SETTINGS -->
    <string name="rate_location">Frequency of get my location %1$s seconds</string>
    <string name="rate_smaller">Bad for battery</string>
    <string name="rate_bigger">Good for battery</string>
    <string name="show_old_wariors">Show old info about wariors</string>
    <string name="provider_title">Provider for define the location</string>
    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="show_circle_warior">Show circle on warior</string>

    <!-- MAP -->
    <string name="direction">Direction</string>

</resources>
