<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gek.teamwar.SettingsActivity">
    <include layout="@layout/toolbar"/>

    <LinearLayout
        style="@style/ItemSettings">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/provider_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/rbGps"
                android:text="@string/provider_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/rbNetwork"
                android:text="@string/provider_network"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>
        </RadioGroup>

    </LinearLayout>

    <include layout="@layout/horizontal_line"/>

    <LinearLayout
        style="@style/ItemSettings">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvStateRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate_location"/>
        </LinearLayout>

        <SeekBar
            android:id="@+id/sbRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="8"
            android:progress="4"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:gravity="left"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_smaller"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:gravity="right"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_bigger"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/horizontal_line"/>

    <LinearLayout
        style="@style/ItemSettings">
        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchOldWariors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/show_old_wariors" />
    </LinearLayout>

    <include layout="@layout/horizontal_line"/>

</LinearLayout>
